--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2667,6 +2667,7 @@ fieldset:disabled a.btn {
   background-color: transparent;
   background-image: none;
   border-color: #6c757d;
+  width: 300px;
 }
 
 .btn-outline-secondary:hover {
@@ -2701,11 +2702,12 @@ fieldset:disabled a.btn {
   background-color: transparent;
   background-image: none;
   border-color: #28a745;
+  width: 300px;
 }
 
 .btn-outline-success:hover {
   color: #fff;
-  background-color: #28a745;
+  background-color: #6db47d;
   border-color: #28a745;
 }
 
@@ -2769,6 +2771,7 @@ fieldset:disabled a.btn {
   background-color: transparent;
   background-image: none;
   border-color: #ffc107;
+  width:300px;
 }
 
 .btn-outline-warning:hover {
